# lumen

./: Cargo.toml
frontend/: index.html  package-lock.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.svelte  app.css
frontend/src/lib/: data.ts
frontend/src/lib/component/: Fieldset.svelte
frontend/src/lib/module/: Character.svelte  CharacterEntry.svelte  Characters.svelte  CharactersStat.svelte  Parts.svelte  PartsEntry.svelte  Template.svelte  TemplateEntry.svelte  Weapon.svelte
src/: main.rs
templates/: index.html
