[package]
name = "lumen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
form_urlencoded = "1.1.0"
oxhttp = { version = "0.1.6", default-features = false, features = ["server"] }
path-tree = "0.7.1"
rand = "0.8.5"
rusqlite = { version = "0.29.0", default-features = false, features = ["bundled"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"

[profile.release]
lto = true
